<resources>
	<string name="app_name">Verification</string>
	<string name="model">CCC-903MT</string>
	<string name="data">09.09.2002</string>
	<string name="list_devices">Приборы</string>
	<string name="return_devices">Ожидание возврата</string>
	<string name="verification">Поверка</string>
	<string name="error">Неизвестная ошибка!</string>
	<string name="relode">ПОВТОР</string>
	<string name="back">НАЗАД</string>
	<string name="search">Поиск по номеру</string>
	<string name="model_title">Модель прибора</string>
	<string name="number_title">Номер прибора/сенсора</string>
	<string name="date_title">Дата поверки</string>
	<string name="parameter_title">Параметр контроля</string>
	<string name="key_station_title">Код станции</string>
	<string name="station_title">Станция</string>
	<string name="position_title">Расположение</string>
	<string name="description_title">Технические характеристики</string>
	<string name="status_title">Статус</string>
	<string name="verification_title">Периодичность поверки</string>
	<string name="info_title">Дополнительная информация</string>
	<string name="save">Сохранить</string>
	<string name="exit">Выход</string>
	<string name="is_empty">Заполните необходимые поля!</string>
	<string name="error_data">Введите дату в формате ДД.ММ.ГГГГ</string>
	<string name="error_number">Введите номер прибора</string>
	<string name="error_model">Выберите модель</string>
	<string name="error_parameter">Выберите параметр измерения</string>
	<string name="error_station">Выберите станцию</string>
	<string name="error_station_key">Выберите код станции</string>
	<string name="error_status">Текущий статус</string>
	<string name="error_position">Укажите расположение прибора на объекте</string>
	<string name="error_verification">Выберете периодичность поверки</string>
	<string name="dialog_status_title">Прибор снят в поверку?</string>
	<string name="dialog_status_cancel">Нет</string>
	<string name="dialog_status_enter">Подтвердить</string>
	<string name="dialog_date_title">Дата следующей поверки</string>
	<string name="update">Обновить</string>
	<string name="message_exit">Нажмите еще раз, чтобы выйти!</string>
	<string name="sign_in">Sign In</string>
	<string name="sign_error">Введите корректные данные!</string>
	<string name="sign_message">Зарегистрировать пользователя?</string>
	<string name="yes">YES</string>
	<string name="no">NO</string>
	<string name="apply">Применить</string>
	<string name="cancel">Сброс</string>
	<string name="desc_number">По убыванию номера прибора</string>
	<string name="asc_number">По возростанию номера прибора</string>
	<string name="desc_date">По убыванию даты поверки</string>
	<string name="asc_date">По возростанию даты поверки</string>
	<string name="default_web_client_id">587178306501-bba4suni59nhiskaae5jl3f0hrs4e3om.apps.googleusercontent.com</string>
	<string name="sign_out">SignOut</string>
	<string name="delete">Delete account</string>
	<string name="title_delete">Удаление аккаунта!</string>
	<string name="delete_button">Удалить</string>
	<string name="dialog_status_yes">Да</string>
    <string name="dialog_waiting_status_title">Результат поверки?</string>
	<string name="dialog_waiting_status_title2">Текущее расположение?</string>
    <string name="dialog_waiting_status_title3">Скорректировать текущее состояние!</string>
    <string name="btn_update_location">Обновить</string>
</resources>